--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <script>document.write('<base href="' + document.location + '" />');</script>
     <link rel="stylesheet" href="style.css" />
     <script data-require="angular.js@1.5.x" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.11/angular.min.js" data-semver="1.5.11"></script>
-    <script src="app.js"></script>
+    
   </head>
 
   <body>
   
-  <h1> Play Tic Tac Toe</h1>
+  <h1 align="center"> Play Tic Tac Toe</h1>
   
   <board> </board>
    
+  <script src="tictactoeAI.js"></script>  
   
   </body>
 
